--- a/src/app/game-over/GameOver.module.css
+++ b/src/app/game-over/GameOver.module.css
@@ -9,7 +9,7 @@
   padding: 5rem 1rem 3rem;
   position: relative;
   overflow: hidden;
-  background: linear-gradient(to bottom right, #FFFFFF 50%, var(--orange-5) 50%);
+  background: var(--black-5);
 }
 
 .imgContainer {
@@ -38,10 +38,15 @@
   font-weight: 600;
   line-height: 37px;
   text-align: center;
+  white-space: nowrap;
 }
 
-.title {
+.contentContainer h2 {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 21px;
   text-align: center;
+  opacity: 0.5;
 }
 
 @media screen and (min-width: 569px) {
@@ -68,5 +73,12 @@
     font-size: 4rem; 
     line-height: 65px;
     text-align: left;
+  }   
+
+  .contentContainer h2 {
+    font-size: 2rem;
+    line-height: 37px;
+    text-align: left;
+    margin-bottom: 0.5rem;
   }   
 }
